# nanoflow

./: README.md  cabal.project  code-to-test.hs  nanoflow.cabal  output.csv  plot.R  predictions.txt  results.txt  test.py
Demos/Gradient/: CHANGELOG.md  Gradient-Demo.cabal
Demos/Gradient/dist-newstyle/cache/: compiler  config
Demos/Gradient/exe/: Main.hs
Demos/ImageClone/: CHANGELOG.md  ImageClone.cabal  README.md  mynet.net
Demos/ImageClone/exe/: Main.hs  Old.hs
Demos/Moons/: CHANGELOG.md  Moons-Demo.cabal  Moons-Demo.cabal.save0  README.md
Demos/Moons/exe/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.1/: nanoflow-0.1.0.0-inplace.conf  package.cache
nanoflow-lib/: .gitignore  CHANGELOG.md  nanoflow.cabal
nanoflow-lib/src/Nanoflow/: Gradient.hs  Graphics.hs  NN.hs
nanoflow-lib/test/: NNTest.hs
nanoflow-lib/test/tools/: pytorch_model_1.py  pytorch_model_2.py  pytorch_model_3.py  pytorch_model_4.py  pytorch_model_5.py  pytorch_model_6.py  pytorch_model_7.py  {
src/: Nanoflow.hs
src-exe/: Main.hs  With-Plot.hs
src-exe/Demos/: GradientExample.hs  NNMoons.hs  NNMoonsPlot.hs
src/Nanoflow/: NN.hs
test/: GradientTest.hs  Main.hs  NNTest.hs  NanoflowTest.hs
