cabal-version:      2.4
name:               nanoflow
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             lesserfish
maintainer:         lesserfish@pm.me

-- A copyright notice.
-- copyright:
category:           Math
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Nanoflow

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.4.0,
                      matrix >= 0.3.6.1,
                      random >= 1.2.1.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable nanoflow
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.16.4.0,
        nanoflow

    hs-source-dirs:   src-exe
    default-language: Haskell2010

test-suite nanoflow-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base >=4.16.4.0
