cabal-version:      2.4
name:               Gradient-Demo
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             lesserfish
maintainer:         lesserfish@pm.me
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Gradient-Demo
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    extra-lib-dirs: ../../nanoflow-lib
    build-depends:    base ^>=4.18.0.0,
                      nanoflow ^>=0.1.0.0
    hs-source-dirs:   exe
    default-language: Haskell2010
