cabal-version:      2.4
name:               Moons-Demo
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             lesserfish
maintainer:         lesserfish@pm.me
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Moons-Demo
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0,
                      nanoflow ^>=0.1.0.0,
                      matrix ^>=0.3.6.1,
                      matplotlib ^>=0.7.7,
                      deepseq ^>=1.4.8.1,
                      random ^>= 1.2.1.1

    hs-source-dirs:   exe
    default-language: Haskell2010
